# SignalForensics

./: .gitignore  README.md  build.bat  decrypt_signal.py  pyproject.toml  requirements.txt
modules/: crypto.py  gnome.py  gnome_live.py  gpg_crypto.py  htmlreport.py  kwallet.py  kwallet_live.py  linux.py  manual.py  shared_utils.py  windows.py
templates/: report_template.html
