[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.poetry]
name = "wyoming"
version = "1.0.0"
description = ""
authors = ["Your Name <gonssalu@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^44.0.0"
pywin32 = "^308"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
